--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -8,7 +8,7 @@ block variables
 
 
 block content
-    .about
+    .about.wrapper-section
         img(src="../assets/img/background/bg-about.png").about-background.img-background
         .container
             .about-wrapper
