--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -55,25 +55,25 @@ block content
       .main-services-wrapper 
         .main-services-left
           .main-services-left__list 
-            .main-services-left__item.item_1.border-radius
+            .main-services-left__item.border-radius
               .main-services-left__item-img 
                 img(src="./assets/img/women.png", alt="")
               .main-services-left__item-title Уход за волосами
               .main-services-left__item-desc 
                 p Курс SPA-ухода включающий в себя множество процедур
-            .main-services-left__item.item_2.border-radius
+            .main-services-left__item.border-radius
               .main-services-left__item-img 
                 img(src="./assets/img/relax.png", alt="")
               .main-services-left__item-title Уход за волосами
               .main-services-left__item-desc 
                 p Курс SPA-ухода включающий в себя множество процедур
-            .main-services-left__item.item_3.border-radius
+            .main-services-left__item.border-radius
               .main-services-left__item-img 
                 img(src="./assets/img/spa.png", alt="")
               .main-services-left__item-title Уход за волосами
               .main-services-left__item-desc 
                 p Курс SPA-ухода включающий в себя множество процедур
-            .main-services-left__item.item_4.border-radius
+            .main-services-left__item.border-radius
               .main-services-left__item-img 
                 img(src="./assets/img/manicure.png", alt="")
               .main-services-left__item-title Уход за волосами
@@ -92,35 +92,41 @@ block content
             a(href="#").main-services-right__content-btn.btn Ещё больше услуг
   
   section 
-    .masters
-      p (допишу позже)
+    .masters-main
       .container 
         .masters-top 
           .master-top__title.title Мастера            
-          a(href="#").master-top__btn.btn Все мастера
+          a(href="/masters.html").master-top__btn.btn Все мастера
         .masters-bottom
           .masters-bottom__list 
-            .master__item.active.master_1
+            .master__item
               .master__item-img
-                img(src="./assets/img/masters/Galina.png")
-              .master__item-content 
+                img(src="./assets/img/masters/1_Генералова Галина.jpg")
+                video(id="master-video")
+                  source(src="./assets/img/masters/video/1_Галина.mp4")
+              a(href="/master.html").master__item-content 
                 .master__item-title Генералова Галина
                 .master__item-desc 
                   p Парикмахер-стилист, визажист, директор салона красоты "МАК"
-            .master__item.master_2
+            .master__item
               .master__item-img
-                img(src="./assets/img/masters/Irina.png")
-              .master__item-content 
-                .master__item-title Генералова Галина
+                img(src="./assets/img/masters/3_Белова Ирина.jpg")
+                video(id="master-video")
+                  source(src="./assets/img/masters/video/3_Ирина.mp4")
+              a(href="/master.html").master__item-content 
+                .master__item-title Белова Ирина
                 .master__item-desc 
                   p Парикмахер-стилист, визажист, директор салона красоты "МАК"
-            .master__item.master_1
+            .master__item
               .master__item-img
-                img(src="./assets/img/masters/Marina.png")
-              .master__item-content 
-                .master__item-title Генералова Галина
+                img(src="./assets/img/masters/2_Тяпкина Светлана.jpg")
+                video(id="master-video")
+                  source(src="./assets/img/masters/video/2_Светлана.mp4")
+              a(href="/master.html").master__item-content 
+                .master__item-title Тяпкина Светлана
                 .master__item-desc 
                   p Парикмахер-стилист, визажист, директор салона красоты "МАК"
+            
 
   section 
     .care-products
@@ -211,7 +217,6 @@ block content
                           
   section 
     .main-about   
-      p Сделать просмотр 360   
       .container
         .main-about__header 
           .main-about__header-title.title Красиво внутри и снаружи
@@ -229,7 +234,7 @@ block content
               img(src="../assets/img/about/about_5.png")
             .main-about__content-item.about_span_2
               img(src="../assets/img/about/about_6.png")
-              a(href="").main-about__content-text 3D-тур по салону
+              
 
   section 
     .main-contacts     
@@ -243,7 +248,7 @@ block content
                 .main-contacts__left-img 
                   img(src="../assets/img/location.svg")
                 .main-contacts__left-text
-                  p г. Орехово-Зуево, ул. 1905 года, д. 1А.
+                  a(href="https://yandex.ru/maps/-/CLXkv9Q") г. Орехово-Зуево, ул. 1905 года, д. 1А.
               .main-contacts__left-item
                 .main-contacts__left-img 
                   img(src="../assets/img/clock.svg")
@@ -254,11 +259,11 @@ block content
                   img(src="../assets/img/phone.svg")
                 .main-contacts__left-text.phone  
                   p 
-                    a(href="tel:+74964150683") 8 (496) 415-06-83<br> 
-                    a(href="tel:+79265382856")  8 (926) 538-28-56
+                    a.whitespace-nowrap(href="tel:+74964150683") 8 (496) 415-06-83<br> 
+                    a.whitespace-nowrap(href="tel:+79265382856")  8 (926) 538-28-56
           .main-contacts__right 
             .main-contacts__right-map 
-              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/main-services/constructor/1.0/js/?um=constructor%3Ae4b3e9cd6479fb6d992faac12460f17b805b5e050ade97094019fa6b3c212956&amp;width=763&amp;height=458&amp;lang=ru_RU&amp;scroll=true"></script>
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7683a57b2f4a1b688ab5f2e7e0862a5a6858164adc1345028126d74eddd8682c&amp;width=917&amp;height=540&amp;lang=ru_RU&amp;scroll=true"></script>
           
 
     
