--- a/src/pug/pages/prices.pug
+++ b/src/pug/pages/prices.pug
@@ -8,7 +8,7 @@ block variables
 
 
 block content
-    .prices
+    .prices.wrapper-section
         img(src="../assets/img/background/bg-prices.png").prices-background.img-background
         .container
             .prices-wrapper
