--- a/src/pug/pages/service.pug
+++ b/src/pug/pages/service.pug
@@ -8,7 +8,7 @@ block variables
 
 
 block content
-    .service
+    .service.wrapper-section
       img(src="../assets/img/background/bg-about.png").service-background.img-background
       .container
           .service-wrapper
