--- a/src/pug/pages/services-section.pug
+++ b/src/pug/pages/services-section.pug
@@ -8,7 +8,7 @@ block variables
 
 
 block content
-  .services-section
+  .services-section.wrapper-section
     img(src="../assets/img/background/bg-contacts.png").services-background.img-background
     .container
         .services-wrapper
@@ -59,7 +59,7 @@ block content
                   img(src="../assets/img/services/services_8.png")
                 .services__item-content 
                   .services__item-title Педикюр
-              a(href="#").services__content-item
+              a(href="/products.html").services__content-item
                 .services__item-img
                   img(src="../assets/img/services/services_9.png")
                 .services__item-content 
