--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -8,7 +8,7 @@ block variables
 
 
 block content
-    .contacts
+    .contacts.wrapper-section
         img(src="../assets/img/background/bg-contacts.png").contacts-background.img-background
         .container
             .contacts-wrapper
@@ -18,8 +18,8 @@ block content
                 .contacts-content 
                     .contacts-content__list
                         .contacts-content__item 
-                            span.contacts-content__title Наш адрес:
-                            p.contacts-content__desc г. Орехово-Зуево, ул. 1905 года, д. 1А
+                            span.contacts-content__title Наш адрес: 
+                            a(href="https://yandex.ru/maps/-/CLXkv9Q").contacts-content__desc г. Орехово-Зуево, ул. 1905 года, д. 1А
                         .contacts-content__item 
                             span.contacts-content__title График работы:
                             p.contacts-content__desc с понедельника по субботу с 10.00 до 20.00, в воскресенье с 10.00 до 19.00 
@@ -29,8 +29,8 @@ block content
                                 a(href="tel:+74964150683") 8 (496) 415-06-83<br> 
                                 a(href="tel:+79265382856")  8 (926) 538-28-56
                         .contacts-content__item 
-                            span.contacts-content__title Электронная почта:
-                            p.contacts-content__desc salonmakk@yandex.ru
+                            span.contacts-content__title Электронная почта: 
+                            a(href="mailto:salonmakk@yandex.ru").contacts-content__desc salonmakk@yandex.ru
                     .contacts-content__map-wrapper
                         .contacts-content__map
                             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae4b3e9cd6479fb6d992faac12460f17b805b5e050ade97094019fa6b3c212956&amp;width=100%&amp;height=458&amp;lang=ru_RU&amp;scroll=true"></script>
