--- a/src/scss/blocks/master.scss
+++ b/src/scss/blocks/master.scss
@@ -1,6 +1,3 @@
-.master-wrapper{
-    @apply pt-[50px] pb-[100px]
-}
 .master-header__title{
     @apply mb-[20px]
 }
@@ -26,7 +23,7 @@
     @apply sm:tracking-[0.04em] leading-[200%] ml-[35px]
 }
 .master-content__services-btn{
-    @apply mt-[60px] bg-red text-bej rounded-tl-[20px] rounded-br-[20px] px-[38px] py-[10px] mr-[15px] lg:mr-[30px] self-center lg:self-start;
+    @apply mt-[60px] bg-red text-bej rounded-tl-[20px] rounded-br-[20px] px-[38px] py-[10px] self-center lg:self-start;
     transition: 0.5s;
 }
 .master-content__services-btn:hover{
