--- a/src/pug/pages/prices.pug
+++ b/src/pug/pages/prices.pug
@@ -45,13 +45,34 @@ block content
                                                 button(type="submit").prices-content__entry Запись
                                             .prices-content__2lv-price 2260 ₽
                                     
-                
-
                         li.prices-content__1lv-item 
                             .prices-content__1lv-title.prices-content__item-title
                                 a(href="#").prices-content__1lv-left Окрашивание на американском красителе Joico
                                 .prices-content__1lv-right 
                                     span.prices-content__plus + 
+
+                            ul.prices-content__2lv-list.close
+                                li.prices-content__2lv-item
+                                    .prices-content__2lv-title.prices-content__item-title
+                                        a(href="#").prices-content__2lv-left Окрашивание стойким красителем The color корни
+                                        .prices-content__2lv-right 
+                                            .prices-content__2lv-price 
+                                                button(type="submit").prices-content__entry Запись
+                                            .prices-content__2lv-price 1600 ₽ 
+                                li.prices-content__2lv-item 
+                                    .prices-content__2lv-title.prices-content__item-title
+                                        a(href="#").prices-content__2lv-left Окрашивание на американском красителе Paul Mitchell
+                                        .prices-content__2lv-right 
+                                            .prices-content__2lv-price 
+                                                button(type="submit").prices-content__entry Запись
+                                            .prices-content__2lv-price 2260 ₽
+                                li.prices-content__2lv-item
+                                    .prices-content__2lv-title.prices-content__item-title
+                                        a(href="#").prices-content__2lv-left Окрашивание на американском красителе Paul Mitchell
+                                        .prices-content__2lv-right 
+                                            .prices-content__2lv-price 
+                                                button(type="submit").prices-content__entry Запись
+                                            .prices-content__2lv-price 2260 ₽
                         li.prices-content__1lv-item 
                             .prices-content__1lv-title.prices-content__item-title
                                 a(href="#").prices-content__1lv-left Биологическая завивка и буфон Paul Mitchell 
